src/test/resources/examples/valid_cases/helloworld.queen
public implementation HelloWorld of Main {
   private final String s = "final in field, classes and param declarations is accepted, but unnecessary";
   public void main(final String[] args) {
      System.out.println("Hello, World");
   }
}

